Rotating not working

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-Senior Project: Leia Chang 
+Senior Project: Leia Chang
 
-TODO: 
-- Refactor for better IO
-- Render based on time
+TODO:
+- Refactor for better IO (3) 
+- Render based on time (2)
+- Rotate 90 degrees on the X axis (1)
