Rename to Docs for github pages

--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 Senior Project: Leia Chang
 
+Note: This repository holds only the OpenGL and data parts of this project.
+Feel free to contact me if you have any interest in the Unity VR portion.
+
+
 To run the project:
     ./s project/resources
 
